styles.css
body {
  font-family: "Source Serif 4", serif;
  margin: 0;
  background: #242424;
  color: #eee;
}

h1, h2, h3 {
  font-family: "Rokkitt", serif;
  font-weight: 600;
}

.container {
  display: flex;
}

.sidebar {
  position: fixed;
  top: 0;
  left: 0;
  width: 360px;
  height: 100vh;
  background: #181818;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
  overflow: hidden;
}

.sidebar p {
  word-wrap: break-word;
}

.content {
  margin-left: 360px;
  padding: 80px;
  max-width: 720px;
  min-height: 100vh;
  box-sizing: border-box;
  background: #242424;
}

.avatar {
  width: 100%;
  border-radius: 12px;
}

.bottom h1 {
  font-family: "Rokkitt", serif;
  font-size: 6rem;
  margin-bottom: 10px;
}

.bottom p {
  color: #ccc;
  font-size: 25px;
  margin-bottom: 15px;
}

nav a {
  display: inline-block;
  margin-right: 10px;
  color: #eee;
  text-decoration: none;
}

nav a:hover {
  color: #4cc9f0;
  text-decoration: underline;
  text-underline-offset: 3px;
}

.divider {
  height: 4px;
  background-color: #fff;
  width: 100%;
  margin: 20px 0;
  border-radius: 1px;
}

.page-title {
  font-family: "Abril Fatface", serif;
  font-weight: 700;
  font-style: italic;
  text-rendering: geometricPrecision;
  text-decoration-line: underline;
  text-decoration-color: #4cc9f0;
  text-underline-offset: 4%;
  text-decoration-thickness: 0.25ex;

  color: #fff;
  text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
  line-height: 1.1;
  margin: 2rem 0 3rem;
}

.page-title {
  font-size: 6rem;
  text-align: center;
  position: relative; 
  top: 0;
  margin: 0 auto 2rem;
}

.page-title:hover {
  color: #4cc9f0;                
}

.page-subtitle {
  font-family: inherit;
  font-weight: inherit;
  font-style: inherit;
  text-rendering: inherit;
  text-decoration-line: inherit;
  text-decoration-color: inherit;
  text-underline-offset: inherit;
  text-decoration-thickness: inherit;
  color: #ccc; 
  text-shadow: inherit;

  font-size: 2rem;
  text-align: left;
  margin: 2rem 0 3rem;
}

.section-title {
  font-family: "Abril Fatface", serif;
  font-weight: 700;
  font-style: italic;
  font-size: 2.5rem;
  text-rendering: geometricPrecision;
  text-decoration-line: underline;
  text-decoration-color: #4cc9f0; 
  text-underline-offset: 4%;
  text-decoration-thickness: 0.25ex;

  word-wrap: break-word; 
  overflow-wrap: break-word;

  color: #fff;
  text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
  line-height: 1.1;
  margin: 2rem 0 3rem;
}

.page-paragraph {
  font-family: "Rokkitt", serif;
  font-size: 1.35rem;       
  line-height: 1.5;        
  color: #cfcfcf;           
  margin-bottom: 2rem;       
  text-align: left;
}

.page-paragraph a {
  color: #4cc9f0;        
  text-decoration: underline;   
  transition: color 0.2s;
}

.page-paragraph a:hover {
  color: #fff;                 
}

.article-hyperlink {
  font-weight: bold;  
  font-size: 1.25rem;
  color: #fff;     
  text-decoration-line: underline;  
  text-decoration-color: #4cc9f0;  
  text-underline-offset: 4%;
  text-decoration-thickness: 0.25ex;
  transition: color 0.2s;
}

.article-hyperlink:hover {
  color: #4cc9f0;   
}

.keyword {
  background-color: rgba(0,0,0,.25);
  color: #ddd;
  padding: 2px 6px;
  border-radius: 4px;
}

.code-container {
  border: 1px solid #111;
  border-radius: 8px;
  background-color: #212121;
  display: block;  
  padding: 0.75rem 1rem;
  margin-bottom: 1.5rem;
  position: relative;
  font-family: "Spline Sans Mono", monospace;
}

.code-label {
  position: absolute;
  top: 0;
  right: 0;
  background-color: #111;
  color: #fff;
  font-size: 0.65rem;
  font-weight: bold;
  padding: 0.2rem 0.5rem;
  border-bottom-left-radius: 6px;
}

.codeblock {
  margin: 0;
  padding: 1rem;
  font-size: 1rem;
  line-height: 1.5;
  background: none; 
  color: #e0e0e0;
  white-space: pre;
  overflow-x: auto;
}

.codeblock .code-keyword { color: #ff79c6; font-weight: bold; }
.codeblock .code-function { color: #50fa7b; }
.codeblock .code-number { color: #bd93f9; }
.codeblock .code-string { color: #f1fa8c; }
.codeblock .code-comment { color: #6272a4; font-style: italic; }

.note-container {
  border: 1px solid #333;
  border-radius: 8px;
  background-color: #2a2a2a; 
  padding: 0.75rem 1rem;
  margin-bottom: 1.5rem;
  position: relative;
  font-family: "Spline Sans Mono", monospace;

  border-left: 4px solid #fff; 
}

.note-label {
  position: absolute;
  top: 0;
  right: 0;
  background-color: #111;
  color: #fff;
  font-size: 0.65rem;
  font-weight: bold;
  padding: 0.2rem 0.5rem;
  border-bottom-left-radius: 6px;
}

.note-content {
  margin: 0;
  padding: 1rem;
  color: #e0e0e0;
  line-height: 1.5;
}

